--- a/app/views/manage_user/index.html.erb
+++ b/app/views/manage_user/index.html.erb
@@ -1,2 +1,2 @@
 <h1>Hello World</h1>
-<%= react_component("ManageUsers", props: @users, prerender: false) %>
+<%= react_component("App", prerender: false) %>
